# Anti

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yooha/antisdk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/anti/capture/: AntiCapture.cpp  AntiCapture.h
app/src/main/cpp/anti/debug/: AntiDebugger.cpp  AntiDebugger.h
app/src/main/cpp/anti/dump/: AntiDump.cpp  AntiDump.h
app/src/main/cpp/anti/emulator/: AntiEmulator.cpp  AntiEmulator.h
app/src/main/cpp/anti/frida/: AntiFrida.cpp  AntiFrida.h
app/src/main/cpp/anti/hook/: AntiHook.cpp  AntiHook.h
app/src/main/cpp/anti/repack/: AntiRepack.cpp  AntiRepack.h
app/src/main/cpp/anti/rom/: AntiRom.cpp  AntiRom.h
app/src/main/cpp/anti/root/: AntiRoot.cpp  AntiRoot.h
app/src/main/cpp/anti/sandbox/: AntiSandBox.cpp  AntiSandBox.h
app/src/main/cpp/anti/unidbg/: AntiUnidbg.cpp  AntiUnidbg.h
app/src/main/cpp/anti/xposed/: AntiXposed.cpp  AntiXposed.h
app/src/main/cpp/arch/arm64-v8a/: syscall_arch.h
app/src/main/cpp/arch/armeabi-v7a/: syscall_arch.h
app/src/main/cpp/arch/x86/: syscall_arch.h
app/src/main/cpp/arch/x86_64/: syscall_arch.h
app/src/main/cpp/base/call/: Method.cpp  Method.h
app/src/main/cpp/base/crash/: Crash.cpp  Crash.h
app/src/main/cpp/base/dlfcn/: LocalDlfcn.cpp  LocalDlfcn.h
app/src/main/cpp/base/env/: Env.cpp  Env.h
app/src/main/cpp/base/field/: Field.cpp  Field.h
app/src/main/cpp/base/file/: File.cpp  File.h
app/src/main/cpp/base/load/: LoadLibrary.cpp  LoadLibrary.h
app/src/main/cpp/base/mem/: Mem.cpp  Mem.h
app/src/main/cpp/base/new/: NewObject.cpp  NewObject.h
app/src/main/cpp/base/shell/: Shell.cpp  Shell.h
app/src/main/cpp/base/str/: Str.cpp  Str.h
app/src/main/cpp/base/syscall/: Syscall.cpp  Syscall.h  syscalls.h
app/src/main/cpp/base/thread/: Thread.cpp  Thread.h
app/src/main/cpp/include/: global.cpp  global.h  include.cpp  include.h
app/src/main/cpp/tools/aes/: AES.cpp  AES.h  base64.cpp  base64.h
app/src/main/cpp/tools/base64/: Base64.cpp  Base64.h
app/src/main/cpp/tools/bigint/: BigInt.cpp  BigInt.h
app/src/main/cpp/tools/crc/: CRC.cpp  CRC.h
app/src/main/cpp/tools/md5/: MD5.cpp  MD5.h
app/src/main/cpp/tools/rc4/: RC4.cpp  RC4.h
app/src/main/cpp/tools/rsa/: Rsa.cpp  Rsa.h  SimpleRsa.cpp  SimpleRsa.h
app/src/main/java/com/yooha/antisdk/: MainActivity.java  PassActivity.java
app/src/main/java/com/yooha/antisdk/tools/: XposedUtil.java  YoohaUtil.java
app/src/main/res/layout/: activity_main.xml  activity_pass.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yooha/antisdk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
